Wed Feb 17 12:14:59 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_init): introduce String.new(capacity: size)
	  [Feature #12024]

Tue Feb 16 19:10:08 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Used only first element
	  (rather than all) of target in CaseUnfold_11 array.
	  (with Kimihito Matsui)

Tue Feb 16 18:24:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (compare_with_zero): fix variable name, rb_cmperr
	  requires VALUEs but not an ID.

Tue Feb 16 17:34:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_dir_s_empty_p): add Dir.empty? method, which tells the
	  argument is the name of an empty directory.  [Feature #10121]

Tue Feb 16 09:51:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (without_destdir): just strip a drive letter
	  which is prepended by with_destdir.
	  pointed out by @DavidEGrayson.
	  https://github.com/ruby/ruby/commit/0e5f9ae#commitcomment-16101763

Tue Feb 16 04:42:13 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_plus): simply use LONG2NUM() instead of wrongly
	  complex overflow case.

	* insns.def (opt_sub): ditto.

Tue Feb 16 02:49:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (without_destdir): compare with the destdir
	  after stripping a drive letter, on dosish platforms.
	  pointed out by @DavidEGrayson.
	  https://github.com/ruby/ruby/commit/d0cf23b#commitcomment-16100407

Mon Feb 15 15:44:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parse_ident): allow keyword arguments just after a
	  method where the same name local variable is defined.
	  [ruby-core:73816] [Bug#12073]

Mon Feb 15 14:43:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Added debugging option
	  (with Kimihito Matsui)

Sun Feb 14 17:31:50 2016  Lars Kanis  <lars@greiz-reinsdorf.de>

	* lib/mkmf.rb (with_{cpp,c,ld}flags): copy caller strings not to