@@ -1,3 +1,13 @@
+Wed Feb 17 20:23:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_init): fix segfault and memory leak, consider
+	  wide char encoding terminator.
+
+Wed Feb 17 19:55:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_init): fix segfault and memory leak, consider
+	  wide char encoding terminator.
+
 Wed Feb 17 12:14:59 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* string.c (rb_str_init): introduce String.new(capacity: size)
